[package]
name = "codeforces"
version = "0.0.1"
authors = ["Alexander Jipa <alexander.jipa@gmail.com>"]
edition = "2018"

[[bin]]
name = "1A"
path = "src/1/A.rs"

[[bin]]
name = "1615A"
path = "src/1615/A.rs"

[[bin]]
name = "1618A"
path = "src/1618/A.rs"

[[bin]]
name = "1620A"
path = "src/1620/A.rs"
