[package]
name = "codeforces"
version = "0.0.1"
authors = ["Alexander Jipa <alexander.jipa@gmail.com>"]
edition = "2018"

[[bin]]
name = "1A"
path = "src/1/A.rs"

[[bin]]
name = "71A"
path = "src/71/A.rs"

[[bin]]
name = "1582A"
path = "src/1582/A.rs"

[[bin]]
name = "1598A"
path = "src/1598/A.rs"

[[bin]]
name = "1602A"
path = "src/1602/A.rs"

[[bin]]
name = "1604A"
path = "src/1604/A.rs"

[[bin]]
name = "1605A"
path = "src/1605/A.rs"

[[bin]]
name = "1607A"
path = "src/1607/A.rs"

[[bin]]
name = "1608A"
path = "src/1608/A.rs"

[[bin]]
name = "1611A"
path = "src/1611/A.rs"

[[bin]]
name = "1611B"
path = "src/1611/B.rs"

[[bin]]
name = "1612A"
path = "src/1612/A.rs"

[[bin]]
name = "1614A"
path = "src/1614/A.rs"

[[bin]]
name = "1615A"
path = "src/1615/A.rs"

[[bin]]
name = "1616A"
path = "src/1616/A.rs"

[[bin]]
name = "1617A"
path = "src/1617/A.rs"

[[bin]]
name = "1618A"
path = "src/1618/A.rs"

[[bin]]
name = "1618B"
path = "src/1618/B.rs"

[[bin]]
name = "1619A"
path = "src/1619/A.rs"

[[bin]]
name = "1619B"
path = "src/1619/B.rs"

[[bin]]
name = "1620A"
path = "src/1620/A.rs"

[[bin]]
name = "1621A"
path = "src/1621/A.rs"

[[bin]]
name = "1622A"
path = "src/1622/A.rs"

[[bin]]
name = "1623A"
path = "src/1623/A.rs"

[[bin]]
name = "1624A"
path = "src/1624/A.rs"

[[bin]]
name = "1625A"
path = "src/1625/A.rs"

[[bin]]
name = "1626A"
path = "src/1626/A.rs"

[[bin]]
name = "1627A"
path = "src/1627/A.rs"
